--- a/website/blog/templates/html/archive.html
+++ b/website/blog/templates/html/archive.html
@@ -2,13 +2,19 @@
 {% block content %}
 
 {% for post in posts %}
-<h2>{{ post.title }}</h2>
+<!-- <h2>{{ post.title }}</h2> -->
+<!-- <h2> <a href="{% url 'blog' %}" >{{ post.title }}</a> </h2> -->
+<!-- <h2> <a href="page1/" >{{ post.title }}</a> </h2>  -->
+
+<h2> <a href="page1/{{ post.title }}/">{{ post.title }}</a> </h2>
 
 <!-- date 
      https://docs.djangoproject.com/en/dev/ref/templates/builtins/#date 
 -->
 <p>{{ post.timestamp | date:"G:i l, F jS Y"  }}</p>
-<p>{{ post.body }}</p>
+
+<!-- <p>{{ post.body }}</p> -->
 
 {% endfor %}
+
 {% endblock %}
